Refactoring and more enchants.